--- a/LoginServer/LoginServer.vcxproj
+++ b/LoginServer/LoginServer.vcxproj
@@ -48,7 +48,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>$(SolutionDir)xgcBase\Database;$(SolutionDir)xgcBase\Netbase;$(SolutionDir)xgcBase\Common;$(SolutionDir)Depend\Loki-0.1.6\include;$(SolutionDir)Tools\$(Configuration)\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)xgcBase\Database;$(SolutionDir)xgcBase\Netbase;$(SolutionDir)xgcBase\Common;$(SolutionDir)Tools\$(Configuration)\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
