--- a/exe/debug/vld.ini
+++ b/exe/debug/vld.ini
@@ -63,7 +63,7 @@ ForceIncludeModules =
 ; very large and cause unnecessary clutter in the memory leak report.
 ;
 ;   Value Values: 0 - 4294967295
-;   Default: 4294967295
+;   Default: 256
 ;
 MaxDataDump = 
 
@@ -73,9 +73,9 @@ MaxDataDump =
 ; walking method (see StackWalkMethod below).
 ;
 ;   Valid Values: 1 - 4294967295
-;   Default: 4294967295
+;   Default: 64
 ;
-MaxTraceFrames = 32
+MaxTraceFrames = 
 
 ; Sets the type of encoding to use for the generated memory leak report. This
 ; option is really only useful in conjuction with sending the report to a file.
