--- a/trunk/Depend/Visual Leak Detector/src/vld.rc
+++ b/trunk/Depend/Visual Leak Detector/src/vld.rc
@@ -53,8 +53,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,9,8,0
- PRODUCTVERSION 1,9,8,0
+ FILEVERSION 2,0,0,0
+ PRODUCTVERSION 2,0,0,0
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
  FILEFLAGS 0x3L
@@ -70,12 +70,16 @@ BEGIN
         BLOCK "040904b0"
         BEGIN
             VALUE "FileDescription", "Visual Leak Detector DLL"
-            VALUE "FileVersion", "1, 9, 8, 0"
+            VALUE "FileVersion", "2, 0, 0, 0"
             VALUE "InternalName", "vld"
-            VALUE "LegalCopyright", "Copyright (C) 2009"
-            VALUE "OriginalFilename", "vld.dll"
+            VALUE "LegalCopyright", "Copyright (C) 2010"
+#ifndef WIN64
+            VALUE "OriginalFilename", "vld_x86.dll"
+#else
+            VALUE "OriginalFilename", "vld_x64.dll"
+#endif
             VALUE "ProductName", "Visual Leak Detector"
-            VALUE "ProductVersion", "1, 9, 8, 0"
+            VALUE "ProductVersion", "2, 0, 0, 0"
         END
     END
     BLOCK "VarFileInfo"
