--- a/GameSDK/GameUILib/GUI.vcxproj
+++ b/GameSDK/GameUILib/GUI.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{0CAAD250-94F2-4158-A8A5-506B578D6E08}</ProjectGuid>
     <RootNamespace>GUI</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <ProjectName>XUI</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -40,16 +41,16 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
     <_ProjectFileVersion>10.0.30128.1</_ProjectFileVersion>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(SolutionDir)Exe\$(Configuration)\</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(SolutionDir)Lib\$(Configuration)\</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(SolutionDir)Temp\$(ProjectName)\$(Configuration)\</IntDir>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(SolutionDir)Exe\$(Configuration)\</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(SolutionDir)Lib\$(Configuration)\</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(SolutionDir)Temp\$(ProjectName)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\..\xgcBase\Common;..\..\Depend\Visual Leak Detector\include;..\..\LuaDebuger;..\lua-5.1.4\src;..\SLB\Include;..\GameCore\Include;./Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>..\..\xgcBase\Common;..\..\LuaDebuger;..\lua-5.1.4\src;..\SLB\Include;..\GameCore\Include;./Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessToFile>false</PreprocessToFile>
       <PreprocessSuppressLineNumbers>false</PreprocessSuppressLineNumbers>
       <MinimalRebuild>false</MinimalRebuild>
@@ -62,14 +63,14 @@
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
     </ClCompile>
     <Lib>
-      <OutputFile>$(SolutionDir)Lib\$(Configuration)\$(ProjectName).lib</OutputFile>
-      <AdditionalLibraryDirectories>$(SolutionDir)Lib\$(Configuration)\;..\lua-5.1.4\src;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <OutputFile>$(SolutionDir)Lib\$(ConfigurationName)\$(TargetName).lib</OutputFile>
+      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <AdditionalIncludeDirectories>..\..\xgcBase\Common;..\..\LuaDebuger;..\lua-5.1.4\src;..\SLB\Include;..\GameCore\Include;./Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeader>
       </PrecompiledHeader>
@@ -77,7 +78,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Lib>
-      <OutputFile>$(SolutionDir)Lib\$(Configuration)\$(ProjectName).lib</OutputFile>
+      <OutputFile>$(SolutionDir)Lib\$(ConfigurationName)\$(TargetName).lib</OutputFile>
       <AdditionalLibraryDirectories>$(SolutionDir)Lib\$(Configuration)\;..\lua-5.1.4\src;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Lib>
   </ItemDefinitionGroup>
@@ -89,14 +90,12 @@
     <ClCompile Include="Source\XUI_Button.cpp" />
     <ClCompile Include="Source\XUI_Dialog.cpp" />
     <ClCompile Include="Source\XUI_EditBox.cpp" />
-    <ClCompile Include="Source\XUI_Picture.cpp" />
+    <ClCompile Include="Source\XUI_Object.cpp" />
     <ClCompile Include="Source\XUI_Window.cpp" />
-    <ClCompile Include="Source\GuiSystem.cpp" />
-    <ClCompile Include="Source\LuaBindClass.cpp" />
-    <ClCompile Include="Source\UICommander.cpp" />
-    <ClCompile Include="Source\UIFactory.cpp" />
-    <ClCompile Include="Source\UIObject.cpp" />
-    <ClCompile Include="Source\XUI_Base.cpp" />
+    <ClCompile Include="Source\XUI_System.cpp" />
+    <ClCompile Include="Source\XUI_LuaBinder.cpp" />
+    <ClCompile Include="Source\XUI_Commander.cpp" />
+    <ClCompile Include="Source\XUI_Factory.cpp" />
     <ClCompile Include="Source\XUI_Canvas.cpp" />
     <ClCompile Include="Source\XUI_IME.cpp" />
     <ClCompile Include="Source\XUI_Wnd.cpp" />
@@ -104,21 +103,18 @@
   <ItemGroup>
     <ClInclude Include="Include\tinystr.h" />
     <ClInclude Include="Include\tinyxml.h" />
+    <ClInclude Include="Include\XUI.h" />
     <ClInclude Include="Include\XUI_Button.h" />
     <ClInclude Include="Include\XUI_Dialog.h" />
     <ClInclude Include="Include\XUI_EditBox.h" />
-    <ClInclude Include="Include\XUI_Picture.h" />
+    <ClInclude Include="Include\XUI_Object.h" />
     <ClInclude Include="Include\XUI_Window.h" />
-    <ClInclude Include="Include\GuiHeader.h" />
-    <ClInclude Include="Include\GuiMacroDefine.h" />
-    <ClInclude Include="Include\GuiSystem.h" />
-    <ClInclude Include="Include\LuaBindClass.h" />
-    <ClInclude Include="Include\MessageDefine.h" />
-    <ClInclude Include="Include\UICommander.h" />
-    <ClInclude Include="Include\UIFactory.h" />
-    <ClInclude Include="UILib.h" />
-    <ClInclude Include="Include\UIObject.h" />
-    <ClInclude Include="Include\XUI_Base.h" />
+    <ClInclude Include="Include\XUI_Header.h" />
+    <ClInclude Include="Include\XUI_MacroDefine.h" />
+    <ClInclude Include="Include\XUI_System.h" />
+    <ClInclude Include="Include\XUI_LuaBinder.h" />
+    <ClInclude Include="Include\XUI_Commander.h" />
+    <ClInclude Include="Include\XUI_Factory.h" />
     <ClInclude Include="Include\XUI_Canvas.h" />
     <ClInclude Include="Include\XUI_IME.h" />
     <ClInclude Include="Include\XUI_Wnd.h" />
